objects/Activity.object
<CustomObject><fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , "Email"), "Email", IF(CONTAINS( Subject , "Cold Call"), "Cold Call", IF(CONTAINS( Subject , "Call"), "Call", IF(CONTAINS( Subject , "Meeting"), "Meeting", IF(CONTAINS( Subject , "On Site Visit"), "Site Visit", IF(CONTAINS( Subject , "Quote"), "Send Letter/Quote", "Other"))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Google_Calender_Id__c</fullName>
        <label>Google Calender Id</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Google_Id__c</fullName>
        <label>Google Id</label>
        <length>255</length>
        <type>Text</type>
    </fields><enableFeeds>false</enableFeeds><sharingModel>Private</sharingModel><listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews><listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews><listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews><listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews></CustomObject>